@@ -1,0 +1,10 @@
+#ifndef LIB_FIZZBUZZ_ALT_H_
+#define LIB_FIZZBUZZ_ALT_H_
+
+#include <fruit/fruit.h>
+
+#include "main/fizzbuzz.h"
+
+fruit::Component<FizzBuzz> getFizzBuzzAltComponent();
+
+#endif
