@@ -1,0 +1,10 @@
+#ifndef MAIN_MAIN_H_
+#define MAIN_MAIN_H_
+
+#include <fruit/fruit.h>
+
+#include "main/fizzbuzz.h"
+
+fruit::Component<FizzBuzz> getComponent();
+
+#endif
