@@ -8,6 +8,7 @@ cc_test(
     copts = COMMON_COPTS,
     deps = [
         "//lib:fizzbuzz",
+        "//lib:fizzbuzz_alt",
         "@com_google_googletest//:gtest_main",
     ],
 )
